# LLVMSlicer

./: CMakeLists.txt  slicer_version.sh
src/Languages/: LLVMSupport.h
src/Modifies/: Modifies.cpp
src/PointsTo/: PointsTo.cpp  PointsTo.h
src/Slicing/: FunctionStaticSlicer.cpp  FunctionStaticSlicer.h  StaticSlicer.cpp
test/: CMakeLists.txt  PTGTester.cpp  PTGTester.h  dump-points-to.cpp  field-sensitive-test.cpp  points-to-perf.cpp  points-to-test.cpp  slice.sh
